@@ -205,7 +205,7 @@ public class AnfangsbestandImpl extends AbstractDBObject
   @Override
   public void setBetrag(double d) throws RemoteException
   {
-    setAttribute("betrag", new Double(d));
+    setAttribute("betrag", Double.valueOf(d));
   }
 
   @Override
