@@ -450,7 +450,7 @@ public class KursteilnehmerImpl extends AbstractDBObject implements
   @Override
   public void setBetrag(double d) throws RemoteException
   {
-    setAttribute("betrag", new Double(d));
+    setAttribute("betrag",  Double.valueOf(d));
   }
 
   @Override
